fix dialog box overflow

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,7 +6,7 @@ $light-gray: #7B7C7E;
 $very-light-gray: #f2f2f2;
 $post-padding: 1.5rem;
 $dialog-width: 40%;
-$dialog-height: 20%;
+$dialog-height: 30%;
 
 @mixin respond-to($media) {
   @if $media == handheld {
@@ -197,9 +197,11 @@ header {
 		}
 	}
 	#dialog-content {
-		height: 100%;
+		height: 80%;
 		overflow: auto;
 		padding-bottom: 2rem;
+		display: block;
+
 	}
 	@include respond-to(handheld) {
 		height: 50%;
